fix for safari white space

--- a/src/app/pages/intro/intro-page/intro-page.component.scss
+++ b/src/app/pages/intro/intro-page/intro-page.component.scss
@@ -166,7 +166,7 @@ section {
     //justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 80px 0;
+    padding: 80px 0;
 
     .title {
       height: 45px;
@@ -236,7 +236,7 @@ section {
 
   .support {
     display: flex;
-    margin: 10px 0;
+    padding: 10px 0;
 
     .content {
       @media only screen and (max-width: 600px) {
